[package]
name = "heimdall"
version = "0.1.0"
authors = ["Michael Craggs <m.e.craggs@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
failure = "0.1"
futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await","compat", "io-compat", "std"] }
futures-util-preview = { version = "=0.3.0-alpha.19" }
hyper = { version = "=0.13.0-alpha.4", features = ["unstable-stream"] }
lazy_static = "1.4"
path-tree = "0.1"
native-tls = "0.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
tokio = { version = "=0.2.0-alpha.6", features = ["tcp"] }
tokio-executor = { version = "=0.2.0-alpha.6" }
tokio-io = { version = "=0.2.0-alpha.6", features=["util"] }
tokio-tls = { version = "=0.3.0-alpha.6" }
unicase = "2.5"
