[package]
name = "heimdall"
version = "0.1.3"
authors = ["Michael Craggs <m.e.craggs@gmail.com>"]
edition = "2018"
description = "Https to Http reverse proxy based on hyper"
tags = ["http", "https", "reverse proxy", "async/await", "hyper", "tokio"]
license = "MIT"
    

[dependencies]
clap = "2.33"
env_logger = "0.7"
failure = "0.1"
futures = { version = "0.3" }
futures-util = { version = "0.3" }
hyper = { version = "0.13", features = ["stream"] }
lazy_static = "1.4"
log = "0.4"
path-tree = "0.1"
native-tls = "0.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
tokio = { version = "0.2", features = ["full"] }
tokio-tls = { version = "0.3" }
unicase = "2.5"
